# i2c-dw-linux-adapter

./: Cargo.toml  Makefile  README.md
patches/: 0001_linux_support_cargo.diff
src/: core_base.rs  lib.rs
