[package]
name = "i2c_dw_linux_adapt"
version = "0.1.0"
edition = "2021"
authors = ["Guoweikang <guoweikang.kernel@gmail.com>"]
description = "I2C DW linux adapater"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = ""

[dependencies]
#dw_apb_i2c = { git = "https://github.com/guoweikang/i2c-designware.git", rev = "d483b1fb8c4dee14d402ede5c7c5d8263041f629"}
dw_apb_i2c = { path = "../i2c-designware/"}
