[package]
name = "i2c_dw_linux_adapt"
version = "0.1.0"
edition = "2021"
authors = ["Guoweikang <guoweikang.kernel@gmail.com>"]
description = "I2C DW linux adapater"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = ""

[features]

[dependencies]
#dw_apb_i2c = { path = "../i2c-designware/", features=["linux"]}
#osl = { path = "../../../../rust/osl/", features=["linux"]}
dw_apb_i2c = { git = "https://github.com/guoweikang/i2c-designware.git", features=["linux"]}
osl = { git = "https://github.com/guoweikang/osl.git", features=["linux"]}
